# ElevatorCertificate

./: LICENSE  README.md
tutorial/email/: .env  .mailenv  mail.py  main.py  main1.py  pyproject.toml  readme.md  send_email.py  test.py
tutorial/email/mail/: config.py  mail.py
tutorial/estamp/: .fenv  config.py  estamp.py  main.py  pyproject.toml  readme.md
tutorial/export_excel/: congfig_printed_file.ini  generate_certificate.py  pyproject.toml  qrcode_base64.py  readme.md  test.py
tutorial/export_excel/template/elevator/: certificate.xlsx  congifuration.xlsx  inspection.xlsx
tutorial/export_excel/template/escalator/: certificate.xlsx  congifuration.xlsx  inspection.xlsx
tutorial/export_excel/template/initial_file/: 扶梯新检规合格证.xlsx
tutorial/export_excel/template/temp/: 合格证打印格式 2.xlsm  合格证打印格式 2.xlsx
tutorial/export_excel/testdata/: certificate1.json  config1.json
tutorial/filesmanagement/: main.py  pyproject.toml  readme.md
tutorial/print_cert/: cert_print.py  congfig_printed_file.ini  generate_pdf.py  json1.txt  json2.txt  json2条.txt  parse_json.py  pyproject.toml  test.py  字段说明.txt
tutorial/print_cert/jsondata/: json1.txt  json2.txt  json3.txt
tutorial/print_cert/templatefile/: cert_template.prep  report_template.prep
tutorial/supply/: alembic.ini  api.py  excel_reader.py  exceltemplate.ini  main.py  models.db  pyproject.toml  readme.md  supplier_models.db  test_board.py  test_excelreader.py
tutorial/supply/alembic/: env.py
tutorial/supply/alembic/versions/: 09925b3e00d7_update_speed_to_string.py  0d0d390585c7_create_new_model.py  1758cacb9330_create_new_model.py  17e49759b9ac_add_price_with_server_default_for_book_.py  200e74e8ed59_add_userid_in_supplier_model.py  2709ce05fbec_create_new_model.py  3205d5538e35_update_smb_model.py  388a422a7fd3_create_new_model.py  3fa7ad51ca56_update_smartb_table.py  40763ee87845_add_wire_rope_model.py  47ac1a3fdbdf_new_migration.py  58a4863d21a4_create_new_model.py  (+27 more)
tutorial/supply/api/: api.py  deps.py
tutorial/supply/core/: excel_reader.py  exceltemplate.ini
tutorial/supply/crud/: __init__.py  crud_supplier.py  crud_supplier_autorescue.py  crud_supplier_board.py  crud_supplier_brake_machine.py  crud_supplier_buffer.py  crud_supplier_controlcabinet.py  crud_supplier_doorsystem.py  crud_supplier_icard.py  crud_supplier_ropehead.py  crud_supplier_safe_brake.py  crud_supplier_safety_machine.py  crud_supplier_speedlimiter.py  crud_supplier_traction_machine.py  crud_supplier_wire_rope.py
tutorial/supply/db/: base.py  base_class.py  session.py
tutorial/supply/model/: models.py  schema.py
tutorial/supply/models/: __init__.py  models.py  supplier.py
tutorial/supply/schemas/: __init__.py  smart_board.py  supplier.py  supplier_auto_rescue.py  supplier_board.py  supplier_brake_machine.py  supplier_buffer.py  supplier_buffer_speedlimiters.py  supplier_control_cabinet.py  supplier_door_system.py  supplier_ic_card.py  supplier_lvct_board.py  supplier_rope_head.py  supplier_safe_brake.py  supplier_safety_machine.py  supplier_smart_board.py  supplier_speed_limiter.py  supplier_traction_machine.py  supplier_wire_rope.py
tutorial/supply/供应商数据表/: IC卡数据表.xlsx  主板数据表.xlsx  安全钳数据表.xlsx  自动救援操作装置数据表.xlsx  限速器缓冲器数据表.xlsx
(+32 files in other folders)
